Settings ajustado para Render

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ mypy_extensions==1.1.0
 packaging==26.0
 pathspec==1.0.4
 platformdirs==4.5.1
+psycopg2-binary==2.9.11
 python-decouple==3.8
 pytokens==0.4.1
 sqlparse==0.5.5
 tzdata==2025.3
+whitenoise==6.11.0
